--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
   android:layout_height="match_parent"
   tools:context=".MainActivity">
 
+
     <com.google.android.material.textview.MaterialTextView
       android:id="@+id/text_permission"
       android:layout_width="wrap_content"
@@ -16,6 +17,16 @@
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintRight_toRightOf="parent"
       app:layout_constraintTop_toTopOf="parent" />
+    <com.google.android.material.textview.MaterialTextView
+      android:id="@+id/service_state"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/service_close"
+      android:textColor="@color/red"
+      app:layout_constraintBottom_toTopOf="@id/button_request_access"
+      app:layout_constraintLeft_toLeftOf="parent"
+      app:layout_constraintRight_toRightOf="parent"
+      app:layout_constraintTop_toTopOf="@id/text_permission" />
 
     <Button
       android:id="@+id/button_request_access"
