--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -98,17 +98,27 @@
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toBottomOf="@id/classes_spinner"></android.widget.Button>
+  <androidx.recyclerview.widget.RecyclerView
+    android:id="@+id/list"
+    android:layout_width="match_parent"
+    android:layout_height="300dp"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"
+    app:layout_constraintTop_toBottomOf="@id/ensureBtn">
+
+  </androidx.recyclerview.widget.RecyclerView>
 
   <android.widget.Button
     android:id="@+id/add_btn"
     android:layout_width="100dp"
     android:layout_height="50dp"
-    android:layout_marginBottom="100dp"
+
     android:background="@drawable/btn"
     android:text="记一笔"
     android:textColor="@color/white"
     android:textSize="18sp"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_marginTop="20dp"
+    app:layout_constraintTop_toBottomOf="@id/list"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"></android.widget.Button>
 
